@@ -126,9 +126,17 @@ sub default_triplet
 
 =over 4
 
+=item C<VCPKG_DEFAULT_TRIPLET>
+
+This is Vcpkg's default triplet.  If set this will override platform detection for the default triplet.
+
 =item C<PERL_WIN32_VCPKG_ROOT>
 
 If set, this will be used for the Vcpkg root instead of automatic detection logic.
+
+=item C<PERL_WIN32_VCPKG_DEBUG>
+
+If set to true, will link against debug libraries.
 
 =back
 
