@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}},
 
 {{$NEXT}}
+  - Add PERL_WIN32_VCPKG_DEBUG env var to override default
+    for debug.
 
 0.01      2020-03-07 14:21:08 -0700
   - initial version
